--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.1",
     "tailwindcss": "^3.3.2"
   }
 }
